--- a/src/app/tour/tour-by-address/tour-by-address.component.html
+++ b/src/app/tour/tour-by-address/tour-by-address.component.html
@@ -19,7 +19,7 @@
   {{loadedDestinations}}
 </h1>
 
-<mat-card *ngFor="let tour of toursByDestination" class="margin-2">
+<mat-card *ngFor="let tour of toursByAddress" class="margin-2">
   <mat-card-title>{{tour.name}}</mat-card-title>
   <mat-card-subtitle>{{tour.rating}} | {{tour.tourType}} | {{tour.price}}$ </mat-card-subtitle>
   <mat-card-actions>
