--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,10 +16,16 @@
                 <button mat-button routerLink="/tour"> Explore </button>
                 <button mat-button> Today's deal </button>
             </div>
+                        
+            <div fxLayout="row" fxLayoutAlign="end center">
+                <button mat-button routerLink="/booking"> Check bookings </button>
+            </div>
+
             <div fxLayout="row" fxLayoutAlign="end center" *ngIf="!(isAuthenticated$ | async)">
                 <button mat-button routerLink="/signin"> Sign in </button>
                 <button mat-button routerLink="/signup"> Create account </button>
             </div>
+            
             <div fxLayout="row" fxLayoutAlign="end center" *ngIf="isAuthenticated$ | async">
                 <button mat-button routerLink="/user"> User page </button>
                 <button mat-button (click)="onSignout()"> Sign out </button>
