--- a/src/app/tour/tour-by-address/tour-by-address.component.html
+++ b/src/app/tour/tour-by-address/tour-by-address.component.html
@@ -16,14 +16,14 @@
 </div>
 
 <h1 class="margin-2">
-  {{loadedDestinations}}
+  {{address}}
 </h1>
 
 <mat-card *ngFor="let tour of toursByAddress" class="margin-2">
-  <mat-card-title>{{tour.name}}</mat-card-title>
+  <mat-card-title class="pointer" [routerLink]="['/tour-details', tour._id]">{{tour.name}}</mat-card-title>
   <mat-card-subtitle>{{tour.rating}} | {{tour.tourType}} | {{tour.price}}$ </mat-card-subtitle>
   <mat-card-actions>
     <button mat-button [routerLink]="['/tour-details', tour._id]">Tour info</button>
-    <button mat-button>Book this tour</button>
+    <button mat-button (click)="bookTour(tour)">Book this tour</button>
   </mat-card-actions>
 </mat-card>
