--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,8 +8,8 @@
         </div>
     </mat-sidenav>
 
-    <mat-sidenav-content>
-        <mat-toolbar fxLayout="row" fxLayoutAlign="space-between center">
+    <mat-sidenav-content fxLayout="column" fxLayoutAlign="space-between none">
+        <mat-toolbar fxLayout="row" fxLayoutAlign="space-between center" class="header">
             <div fxLayout="row" fxLayoutAlign="start center">
                 <button mat-button (click)="sidenav.toggle()">Menu</button>
                 <button mat-button routerLink="/"> letsgo123.xyz </button>
@@ -32,23 +32,23 @@
             </div>
         </mat-toolbar>
 
-        <router-outlet></router-outlet>
+        <router-outlet class="main-view"></router-outlet>
 
-        <div fxLayout="row" fxLayoutAlign="space-around " class="footer">
-            <ul>
-                <li>Contact us</li>
-                <li>FAQs</li>
-                <li>Terms of use</li>
-            </ul>
-            <ul>
-                <li>About us</li>
-                <li>Blog</li>
-                <li>Terms of use</li>
-            </ul>
-            <ul>
-                <li>Partner with us</li>
-                <li>Career</li>
-            </ul>
+        <div fxLayout="row" fxLayoutAlign="space-around none" class="footer">
+            <div fxLayout="column">
+                <div>Contact us</div>
+                <div>FAQs</div>
+                <div>Terms of use</div>
+            </div>
+            <div fxLayout="column">
+                <div>About us</div>
+                <div>Blog</div>
+                <div>Terms of use</div>
+            </div>
+            <div fxLayout="column">
+                <div>Partner with us</div>
+                <div>Career</div>
+            </div>
         </div>
     </mat-sidenav-content>
 </mat-sidenav-container>
