--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,35 +1,7 @@
 <div class="main-page" fxLayout="column">
 
-    <div fxLayout="row" fxLayoutAlign="center center">
-        <mat-form-field floatLabel="never">
-            <input matInput placeholder="From ?">
-        </mat-form-field>
-        <mat-form-field floatLabel="never">
-            <input matInput placeholder="To ?">
-        </mat-form-field>
-        <mat-form-field floatLabel="never">
-            <input matInput [matDatepicker]="date" placeholder="Date">
-            <mat-datepicker-toggle matSuffix [for]="date"></mat-datepicker-toggle>
-            <mat-datepicker #date></mat-datepicker>
-        </mat-form-field>
-        <button mat-icon-button>
-            <mat-icon aria-label="search icon-button">search</mat-icon>
-        </button>
-    </div>
+    <app-search></app-search>
 
-    <!-- <mat-grid-list cols="4" rowHeight="3:1">
-        <mat-grid-tile *ngFor="let destination of popularPlaces" >
-            <mat-card>
-                {{destination}}
-                <mat-card-actions>
-                    <button 
-                    mat-button [routerLink]="['/tour-by-address', destination]">
-                    Find out more
-                    </button>
-                </mat-card-actions>
-            </mat-card>
-        </mat-grid-tile>
-    </mat-grid-list> -->
     <div fxLayout="row wrap" fxLayoutAlign="space-evenly center" class="margin-2">
         <mat-card fxFlex.lt-sm="100%" fxFlex.lt-md="45%" fxFlex="25%" *ngFor="let place of popularPlaces"
             class="margin-1">
