--- a/src/app/main-page/main-page.component.css
+++ b/src/app/main-page/main-page.component.css
@@ -5,3 +5,13 @@
 .margin-2 {
     margin: 2%;
 }
+
+.transparent-75 {
+    opacity: 0.75;
+    filter: alpha(opacity=75); /* For IE8 and earlier */
+}
+
+.main-page{
+    background: url(./../../assets/cover.jpeg);
+    background-size: cover;
+}
