--- a/src/app/shared/search/search.component.html
+++ b/src/app/shared/search/search.component.html
@@ -1,16 +1,18 @@
 <div fxLayout="row" fxLayoutAlign="center center">
-  <mat-form-field floatLabel="never">
-      <input matInput placeholder="From ?">
-  </mat-form-field>
-  <mat-form-field floatLabel="never">
-      <input matInput placeholder="To ?">
-  </mat-form-field>
-  <mat-form-field floatLabel="never">
-      <input matInput [matDatepicker]="date" placeholder="Date">
-      <mat-datepicker-toggle matSuffix [for]="date"></mat-datepicker-toggle>
-      <mat-datepicker #date></mat-datepicker>
-  </mat-form-field>
-  <button mat-icon-button>
-      <mat-icon aria-label="search icon-button">search</mat-icon>
-  </button>
+    <mat-form-field floatLabel="never">
+        <input matInput placeholder="From ?" #from>
+    </mat-form-field>
+    <mat-form-field floatLabel="never">
+        <input matInput placeholder="To ?" #to>
+    </mat-form-field>
+    <mat-form-field floatLabel="never">
+        <input matInput [matDatepicker]="date" placeholder="Date">
+        <mat-datepicker-toggle matSuffix [for]="date"></mat-datepicker-toggle>
+        <mat-datepicker #date></mat-datepicker>
+    </mat-form-field>
+    <button mat-icon-button>
+        <mat-icon aria-label="search icon-button" (click)="searchTour(from.value, to.value, date.value)">
+            search
+        </mat-icon>
+    </button>
 </div>
