--- a/src/app/tour/tour.component.html
+++ b/src/app/tour/tour.component.html
@@ -1,35 +1,54 @@
 <div fxLayout="column">
   <div fxFlexAlign="center">
-      <app-search></app-search>
+    <app-search></app-search>
   </div>
 
   <div fxLayout="row">
-    <mat-card fxFlexAlign="start" fxFlex="30">
-      <mat-card-title>Filter by</mat-card-title>
-      <section fxLayout="column" class="top-bottom-margin">
-        <div>Guest rating by category</div>
-        <mat-checkbox>Value for money</mat-checkbox>
-        <mat-checkbox>Excellent service</mat-checkbox>
-        <mat-checkbox>Excellent location</mat-checkbox>
-      </section>
+    <div fxFlex="30">
+      <div fxLayoutAlign="center">
+        <h1>
+          Filter by
+        </h1>
+      </div>
+      <mat-card>
+        <mat-card-title>
+          Tour type
+        </mat-card-title>
+        <section fxLayout="column" class="top-bottom-margin">
+          <mat-checkbox>Luxary</mat-checkbox>
+          <mat-checkbox>Economy</mat-checkbox>
+        </section>
+      </mat-card>
+      <mat-card>
+        <mat-card-title>
+          Tour price
+        </mat-card-title>
+        <section class="top-bottom-margin">
+          <mat-radio-group fxLayout="column">
+            <mat-radio-button value="1">Under 100$</mat-radio-button>
+            <mat-radio-button value="2">100$ - 300$</mat-radio-button>
+            <mat-radio-button value="3">Over 300$ </mat-radio-button>
+          </mat-radio-group>
+        </section>
+      </mat-card>
+      <mat-card>
+        <mat-card-title>
+          Number of days
+        </mat-card-title>
+        <section fxLayout="column" class="top-bottom-margin">
+          <mat-checkbox>1 - 3 days</mat-checkbox>
+          <mat-checkbox>4 - 7 days</mat-checkbox>
+          <mat-checkbox> More than 7 days</mat-checkbox>
+        </section>
+      </mat-card>
+    </div>
 
-      <section class="top-bottom-margin">
-        <div>Acommodation class</div>
-        <mat-radio-group fxLayout="column">
-          <mat-radio-button value="1">Budget</mat-radio-button>
-          <mat-radio-button value="2">Luxary</mat-radio-button>
-        </mat-radio-group>
-      </section>
-
-      <section fxLayout="column" class="top-bottom-margin">
-        <div>Room offers</div>
-        <mat-checkbox>Breakfast included</mat-checkbox>
-        <mat-checkbox>Airport transfer</mat-checkbox>
-        <mat-checkbox>Early check-in</mat-checkbox>
-        <mat-checkbox>Late check-out</mat-checkbox>
-      </section>
-    </mat-card>
     <div fxLayout="column" fxFlex="70">
+      <div fxLayoutAlign="center">
+        <h1>
+          Popular tours
+        </h1>
+      </div>
       <mat-card *ngFor="let tour of tours">
         <mat-card-header>
           <mat-card-title [routerLink]="['/tour-details', tour._id]" class="pointer">{{tour.name}} </mat-card-title>
@@ -43,11 +62,12 @@
             </p>
           </mat-card-content>
         </mat-card-header>
-        <img src="." alt="Photo of tour {{tour.name}}">
+        <img src="../../assets/da-lat-2.jpg" alt="Photo of tour {{tour.name}}">
         <mat-card-content>
           Review
         </mat-card-content>
         <mat-card-actions>
+          <button mat-button [routerLink]="['/tour-details', tour._id]"> More info </button>
           <button mat-button (click)="bookTour(tour)"> Book Tour {{tour.name}} </button>
         </mat-card-actions>
       </mat-card>
