--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -31,8 +31,9 @@
                 <button mat-button (click)="onSignout()"> Sign out </button>
             </div>
         </mat-toolbar>
-        
-        <main>
+
+        <!-- for full page layout -->
+        <main fxFlex>
             <router-outlet></router-outlet>
         </main>
 
