--- a/src/app/tour/tour.component.html
+++ b/src/app/tour/tour.component.html
@@ -24,10 +24,10 @@
           Tour price
         </mat-card-title>
         <section class="top-bottom-margin">
-          <mat-radio-group fxLayout="column">
-            <mat-radio-button value="1">Under 100$</mat-radio-button>
-            <mat-radio-button value="2">100$ - 300$</mat-radio-button>
-            <mat-radio-button value="3">Over 300$ </mat-radio-button>
+          <mat-radio-group fxLayout="column" [(ngModel)]="priceRange">
+            <mat-radio-button value="under 100">Under 100$</mat-radio-button>
+            <mat-radio-button value="100 - 300">100$ - 300$</mat-radio-button>
+            <mat-radio-button value="over 300">Over 300$ </mat-radio-button>
           </mat-radio-group>
         </section>
       </mat-card>
