--- a/src/app/tour/tour.component.html
+++ b/src/app/tour/tour.component.html
@@ -10,36 +10,41 @@
           Filter by
         </h1>
       </div>
+
       <mat-card>
         <mat-card-title>
           Tour type
         </mat-card-title>
-        <section fxLayout="column" class="top-bottom-margin">
-          <mat-checkbox>Luxary</mat-checkbox>
-          <mat-checkbox>Economy</mat-checkbox>
+        <section fxLayout="column" class="top-bottom-margin" >
+          <mat-checkbox [(ngModel)]="luxary" (change)="filterByType()">Luxary</mat-checkbox>
+          {{luxary}}
+          <mat-checkbox [(ngModel)]="economy">Economy</mat-checkbox>
+          {{economy}}
         </section>
       </mat-card>
+
       <mat-card>
         <mat-card-title>
           Tour price
         </mat-card-title>
-        <section class="top-bottom-margin">
-          <mat-radio-group fxLayout="column" [(ngModel)]="priceRange">
-            <mat-radio-button value="under 100">Under 100$</mat-radio-button>
-            <mat-radio-button value="100 - 300">100$ - 300$</mat-radio-button>
-            <mat-radio-button value="over 300">Over 300$ </mat-radio-button>
-          </mat-radio-group>
-        </section>
+        <mat-radio-group class="top-bottom-margin" fxLayout="column" [(ngModel)]="priceRange">
+          <mat-radio-button value="all">All </mat-radio-button>
+          <mat-radio-button value="under100">Under 100$</mat-radio-button>
+          <mat-radio-button value="100to300">100$ - 300$</mat-radio-button>
+          <mat-radio-button value="over300">Over 300$ </mat-radio-button>
+        </mat-radio-group>
+        {{priceRange}}
       </mat-card>
+
       <mat-card>
         <mat-card-title>
           Number of days
         </mat-card-title>
-        <section fxLayout="column" class="top-bottom-margin">
-          <mat-checkbox>1 - 3 days</mat-checkbox>
-          <mat-checkbox>4 - 7 days</mat-checkbox>
-          <mat-checkbox> More than 7 days</mat-checkbox>
-        </section>
+        <mat-radio-group fxLayout="column" class="top-bottom-margin" [(ngModel)]="daysNumber" >
+          <mat-radio-button value="1to3" >1 - 3 days</mat-radio-button>
+          <mat-radio-button value="4to7" >4 - 7 days</mat-radio-button>
+        </mat-radio-group>
+        {{daysNumber}}
       </mat-card>
     </div>
 
