Update app structure

--- a/src/app/core/common-places/common-places.component.css
+++ b/src/app/core/common-places/common-places.component.css
@@ -12,7 +12,7 @@
 }
 
 .main-page {
-    background: url(./../../assets/cover.jpeg);
+    /* background: url(./../../assets/cover.jpeg); */
     background-size: cover;
     min-height: 100%; /*full height image => with fxFlex*/
 }
