--- a/src/app/core/common-places/common-places.component.html
+++ b/src/app/core/common-places/common-places.component.html
@@ -8,7 +8,7 @@
                 {{place}}
             </mat-card-title>
             <mat-card-actions>
-                <button mat-raised-button [routerLink]="['/tour-by-address', place]">
+                <button mat-raised-button [routerLink]="['/tour', place]">
                     Find out more
                 </button>
             </mat-card-actions>
