--- a/src/app/tour/tour-details/tour-details.component.html
+++ b/src/app/tour/tour-details/tour-details.component.html
@@ -8,7 +8,7 @@
             </mat-card-subtitle>
         </mat-card-header>
         <mat-card-content>
-            <img src="../../../assets/da-lat-2.jpg" alt="image">
+            <img src="" alt="image">
             <mat-accordion multi="true">
                 <mat-expansion-panel *ngFor="let place of selectedTour.journey ; let i = index">
                     <mat-expansion-panel-header>
