Update app structure

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,52 +9,14 @@
     </mat-sidenav>
 
     <mat-sidenav-content fxLayout="column" fxLayoutAlign="space-between none">
-        <mat-toolbar fxLayout="row" fxLayoutAlign="space-between center" class="header">
-            <div fxLayout="row" fxLayoutAlign="start center">
-                <button mat-button (click)="sidenav.toggle()">Menu</button>
-                <button mat-button routerLink="/"> letsgo123.xyz </button>
-                <button mat-button routerLink="/tour"> Explore </button>
-                <button mat-button> Today's deal </button>
-            </div>
-
-            <div fxLayout="row" fxLayoutAlign="end center">
-                <button mat-button routerLink="/booking"> Check bookings </button>
-            </div>
-
-            <div fxLayout="row" fxLayoutAlign="end center" *ngIf="!(isAuthenticated$ | async)">
-                <button mat-button routerLink="/signin"> Sign in </button>
-                <button mat-button routerLink="/signup"> Create account </button>
-            </div>
-
-            <div fxLayout="row" fxLayoutAlign="end center" *ngIf="isAuthenticated$ | async">
-                <button mat-button routerLink="/user"> User page </button>
-                <button mat-button (click)="onSignout()"> Sign out </button>
-            </div>
-        </mat-toolbar>
+        <app-header></app-header>
 
         <!-- for full page layout -->
         <main fxFlex>
             <router-outlet></router-outlet>
         </main>
 
-        <div>
-            <div fxLayout="row" fxLayoutAlign="space-around none" class="footer">
-                <div fxLayout="column">
-                    <div>Contact us</div>
-                    <div>FAQs</div>
-                    <div>Terms of use</div>
-                </div>
-                <div fxLayout="column">
-                    <div>About us</div>
-                    <div>Blog</div>
-                    <div>Terms of use</div>
-                </div>
-                <div fxLayout="column">
-                    <div>Partner with us</div>
-                    <div>Career</div>
-                </div>
-            </div>
-        </div>
+        <app-footer></app-footer>
 
     </mat-sidenav-content>
 </mat-sidenav-container>
