Update app structure

--- a/src/app/core/common-places/common-places.component.html
+++ b/src/app/core/common-places/common-places.component.html
@@ -3,7 +3,7 @@
     <app-search></app-search>
 
     <div fxLayout="row wrap" fxLayoutAlign="space-evenly center" class="margin-2 transparent-80">
-        <mat-card fxFlex.lt-sm="100%" fxFlex.lt-md="45%" fxFlex="25%" *ngFor="let place of popularPlaces" class="margin-1">
+        <mat-card fxFlex.lt-sm="100%" fxFlex.lt-md="45%" fxFlex="25%" *ngFor="let place of commonPlaces" class="margin-1">
             <mat-card-title>
                 {{place}}
             </mat-card-title>
