--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -2,7 +2,7 @@
   <div fxLayout="row" fxLayoutAlign="start center">
       <button mat-button (click)="sidenav.toggle()">Menu</button>
       <button mat-button routerLink="/"> letsgo123.xyz </button>
-      <button mat-button routerLink="/tour"> Explore </button>
+      <button mat-button routerLink="/tour/all"> Explore </button>
       <button mat-button> Today's deal </button>
   </div>
 
