--- a/src/app/core/common-places/common-places.component.html
+++ b/src/app/core/common-places/common-places.component.html
@@ -1,6 +1,10 @@
-<div class="main-page" fxLayout="column">
+<div class="main-page" fxLayout="column" fxLayoutAlign="space-around center">
 
     <app-search></app-search>
+    
+    <h1 fxLayoutAlign="center" routerLink="/tour/all" class="pointer" fxHide.lt-md="true">
+        Explore most popular destinations now !
+    </h1>
 
     <div fxLayout="row wrap" fxLayoutAlign="space-evenly center" class="margin-2 transparent-80">
         <mat-card fxFlex.lt-sm="100%" fxFlex.lt-md="45%" fxFlex="25%" *ngFor="let place of commonPlaces" class="margin-1">
