--- a/src/app/shared/filter/filter.component.html
+++ b/src/app/shared/filter/filter.component.html
@@ -27,8 +27,8 @@
     Number of days
   </mat-card-title>
   <mat-radio-group fxLayout="column" class="top-bottom-margin" [(ngModel)]="daysNumber" (change)="filterByDays()">
-    <mat-radio-button value="lessthan3" >1 - 3 days</mat-radio-button>
-    <mat-radio-button value="from3" >4+ days</mat-radio-button>
+    <mat-radio-button value="1to3" >1 - 3 days</mat-radio-button>
+    <mat-radio-button value="from4" >4+ days</mat-radio-button>
     <mat-radio-button value="any" >Any</mat-radio-button>
   </mat-radio-group>
   {{daysNumber}}
