--- a/src/app/tour/tour.component.html
+++ b/src/app/tour/tour.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column" fxLayoutAlign="space-between ">
+<div fxLayout="column" fxLayoutAlign="space-between " class="container">
   <div fxFlexAlign="center" class="search-bar">
     <app-search></app-search>
   </div>
