--- a/src/app/core/common-places/common-places.component.css
+++ b/src/app/core/common-places/common-places.component.css
@@ -15,6 +15,7 @@
     /* background: url(./../../assets/cover.jpeg); */
     /* background-size: cover; */
     min-height: 100%; /*full height image => with fxFlex*/
+    background-image: linear-gradient(to right, rgb(82, 196, 235), rgb(243, 236, 236));
 }
 
 .pointer{
