--- a/src/app/core/footer/footer.component.css
+++ b/src/app/core/footer/footer.component.css
@@ -1,3 +1,3 @@
-* {
-    background-color: antiquewhite;
+.footer {
+    background-image: linear-gradient(to right, rgb(137, 217, 241), rgb(233, 250, 255));
 }
