--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -1,3 +1,3 @@
 mat-toolbar {
-    background-color: antiquewhite;
+    background-image: linear-gradient(to right, rgb(137, 217, 241), rgb(233, 250, 255));
 }
