--- a/src/app/shared/filter/filter.component.css
+++ b/src/app/shared/filter/filter.component.css
@@ -1,7 +1,7 @@
-.top-bottom-margin {
-    margin: 10% 0%;
+.margin-5 {
+    margin: 5%;
 }
 
 mat-card {
-    margin-bottom: 5%;
+    margin: 0% 5% 5% 5%;
 }
