--- a/src/app/shared/filter/filter.component.html
+++ b/src/app/shared/filter/filter.component.html
@@ -2,34 +2,31 @@
   <mat-card-title>
     Tour type
   </mat-card-title>
-  <section fxLayout="column" class="top-bottom-margin" >
-    <mat-checkbox [(ngModel)]="luxary" (change)="filterByType()">Luxary</mat-checkbox>
-    {{luxary}}
-    <mat-checkbox [(ngModel)]="economy" (change)="filterByType()">Economy</mat-checkbox>
-    {{economy}}
-  </section>
+  <mat-radio-group class="margin-5" fxLayout="column" [(ngModel)]="type" (change)="filter()">
+    <mat-radio-button value="luxary">Luxary</mat-radio-button>
+    <mat-radio-button value="economy">Economy </mat-radio-button>
+    <mat-radio-button value="any">Any </mat-radio-button>
+  </mat-radio-group>
 </mat-card>
 
 <mat-card>
   <mat-card-title>
     Tour price
   </mat-card-title>
-  <mat-radio-group class="top-bottom-margin" fxLayout="column" [(ngModel)]="priceRange" (change)="filterByPrice()">
+  <mat-radio-group class="margin-5" fxLayout="column" [(ngModel)]="priceRange" (change)="filter()">
     <mat-radio-button value="under100">Under 100$</mat-radio-button>
     <mat-radio-button value="over100">Over 100$ </mat-radio-button>
     <mat-radio-button value="any">Any </mat-radio-button>
   </mat-radio-group>
-  {{priceRange}}
 </mat-card>
 
 <mat-card>
   <mat-card-title>
     Number of days
   </mat-card-title>
-  <mat-radio-group fxLayout="column" class="top-bottom-margin" [(ngModel)]="daysNumber" (change)="filterByDays()">
+  <mat-radio-group fxLayout="column" class="margin-5" [(ngModel)]="daysNumber" (change)="filter()">
     <mat-radio-button value="1to3" >1 - 3 days</mat-radio-button>
     <mat-radio-button value="from4" >4+ days</mat-radio-button>
     <mat-radio-button value="any" >Any</mat-radio-button>
   </mat-radio-group>
-  {{daysNumber}}
 </mat-card>
