--- a/src/app/tour/tour.component.html
+++ b/src/app/tour/tour.component.html
@@ -4,12 +4,12 @@
   </div>
 
   <div fxLayout="row">
-    <div fxFlex="30">
+    <div fxFlex="25">
       <app-filter></app-filter>
     </div>
 
-    <div fxLayout="column" fxFlex="70">
-      <div fxLayoutAlign="start">
+    <div fxLayout="column" fxFlex>
+      <div fxLayoutAlign="center center">
         <h1>
           {{title}}
         </h1>
