--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,47 +1,51 @@
-<!-- for big screen -->
-<mat-toolbar fxLayout="row" fxHide.lt-md="true" fxLayoutAlign="space-between center">
-  <nav fxLayout="row" fxLayoutAlign="start center">
-      <button mat-button routerLink="/"> letsgo123.xyz </button>
-      <button mat-button routerLink="/tour/all"> Explore </button>
-      <button mat-button> Today's deal </button>
-  </nav>
-
-  <nav fxLayout="row" fxLayoutAlign="end center">
-      <button mat-button routerLink="/booking"> Check bookings </button>
-  </nav>
-
-  <nav fxLayout="row" fxLayoutAlign="end center" *ngIf="!(isAuthenticated$ | async)">
-      <button mat-button routerLink="/signin"> Sign in </button>
-      <button mat-button routerLink="/signup"> Create account </button>
-  </nav>
-
-  <nav fxLayout="row" fxLayoutAlign="end center" *ngIf="isAuthenticated$ | async">
-      <button mat-button routerLink="/user"> User page </button>
-      <button mat-button (click)="onSignout()"> Sign out </button>
-  </nav>
-</mat-toolbar>
-
-<!-- for small screen -->
-<div fxLayout="column" fxHide.gt-sm="true">
-    <nav fxLayout="column" fxLayoutAlign="start center">
-        <button mat-button routerLink="/tour/all"> Explore </button>
-        <button mat-button> Today's deal </button>
-    </nav>
-    <mat-divider></mat-divider>
-  
-    <nav fxLayout="column" fxLayoutAlign="end center">
-        <button mat-button routerLink="/booking"> Check bookings </button>
-    </nav>
-    <mat-divider></mat-divider>
-  
-    <nav fxLayout="column" fxLayoutAlign="end center" *ngIf="!(isAuthenticated$ | async)">
-        <button mat-button routerLink="/signin"> Sign in </button>
-        <button mat-button routerLink="/signup"> Create account </button>
-    </nav>
-    <mat-divider></mat-divider>
-  
-    <nav fxLayout="column" fxLayoutAlign="end center" *ngIf="isAuthenticated$ | async">
-        <button mat-button routerLink="/user"> User page </button>
-        <button mat-button (click)="onSignout()"> Sign out </button>
-    </nav>
+<div>
+    <!-- for big screen -->
+    <mat-toolbar fxLayout="row" fxHide.lt-md="true" fxLayoutAlign="space-between center">
+      <nav fxLayout="row" fxLayoutAlign="start center">
+          <button mat-button routerLink="/"> letsgo123.xyz </button>
+          <button mat-button routerLink="/tour/all"> Explore </button>
+          <button mat-button> Today's deal </button>
+      </nav>
+    
+      <nav fxLayout="row" fxLayoutAlign="end center">
+          <button mat-button routerLink="/booking"> Check bookings </button>
+      </nav>
+    
+      <nav fxLayout="row" fxLayoutAlign="end center" *ngIf="!(isAuthenticated$ | async)">
+          <button mat-button routerLink="/signin"> Sign in </button>
+          <button mat-button routerLink="/signup"> Create account </button>
+      </nav>
+    
+      <nav fxLayout="row" fxLayoutAlign="end center" *ngIf="isAuthenticated$ | async">
+          <button mat-button routerLink="/user"> User page </button>
+          <button mat-button (click)="onSignout()"> Sign out </button>
+      </nav>
+    </mat-toolbar>
+    
+    <!-- for small screen -->
+    <div fxLayout="column" fxHide.gt-sm="true">
+        <nav fxLayout="column" fxLayoutAlign="start center">
+            <button mat-button routerLink="/tour/all"> Explore </button>
+            <button mat-button> Today's deal </button>
+        </nav>
+        <mat-divider></mat-divider>
+      
+        <nav fxLayout="column" fxLayoutAlign="end center">
+            <button mat-button routerLink="/booking"> Check bookings </button>
+        </nav>
+        <mat-divider></mat-divider>
+      
+        <nav fxLayout="column" fxLayoutAlign="end center" *ngIf="!(isAuthenticated$ | async)">
+            <button mat-button routerLink="/signin"> Sign in </button>
+            <button mat-button routerLink="/signup"> Create account </button>
+        </nav>
+        <mat-divider></mat-divider>
+      
+        <nav fxLayout="column" fxLayoutAlign="end center" *ngIf="isAuthenticated$ | async">
+            <button mat-button routerLink="/user"> User page </button>
+            <button mat-button (click)="onSignout()"> Sign out </button>
+        </nav>
+    </div>
+    
+    <mat-progress-bar mode="indeterminate" *ngIf="loading"></mat-progress-bar>
 </div>
