--- a/src/app/shared/filter/filter.component.css
+++ b/src/app/shared/filter/filter.component.css
@@ -2,6 +2,10 @@
     margin: 5%;
 }
 
-mat-card {
-    margin: 0% 5% 5% 5%;
+.padding-5 {
+    padding: 5%;
+}
+
+.container{
+    background-image: linear-gradient(to bottom, rgb(140, 203, 245), rgb(206, 226, 241));
 }
