--- a/src/app/shared/filter/filter.component.html
+++ b/src/app/shared/filter/filter.component.html
@@ -1,32 +1,34 @@
-<mat-card>
-  <mat-card-title>
-    Tour type
-  </mat-card-title>
-  <mat-radio-group class="margin-5" fxLayout="column" [(ngModel)]="type" (change)="filter()">
-    <mat-radio-button value="luxary">Luxary</mat-radio-button>
-    <mat-radio-button value="economy">Economy </mat-radio-button>
-    <mat-radio-button value="any">Any </mat-radio-button>
-  </mat-radio-group>
-</mat-card>
-
-<mat-card>
-  <mat-card-title>
-    Tour price
-  </mat-card-title>
-  <mat-radio-group class="margin-5" fxLayout="column" [(ngModel)]="priceRange" (change)="filter()">
-    <mat-radio-button value="under100">Under 100$</mat-radio-button>
-    <mat-radio-button value="over100">Over 100$ </mat-radio-button>
-    <mat-radio-button value="any">Any </mat-radio-button>
-  </mat-radio-group>
-</mat-card>
-
-<mat-card>
-  <mat-card-title>
-    Number of days
-  </mat-card-title>
-  <mat-radio-group fxLayout="column" class="margin-5" [(ngModel)]="daysNumber" (change)="filter()">
-    <mat-radio-button value="1to3" >1 - 3 days</mat-radio-button>
-    <mat-radio-button value="from4" >4+ days</mat-radio-button>
-    <mat-radio-button value="any" >Any</mat-radio-button>
-  </mat-radio-group>
-</mat-card>
+<div class="container">
+  <div class="margin-5 padding-5">
+    <div>
+      Tour type
+    </div>
+    <mat-radio-group class="margin-5" fxLayout="column" [(ngModel)]="type" (change)="filter()">
+      <mat-radio-button value="luxary">Luxary</mat-radio-button>
+      <mat-radio-button value="economy">Economy </mat-radio-button>
+      <mat-radio-button value="any">Any </mat-radio-button>
+    </mat-radio-group>
+  </div>
+  
+  <div class="margin-5 padding-5">
+    <div>
+      Tour price
+    </div>
+    <mat-radio-group class="margin-5" fxLayout="column" [(ngModel)]="priceRange" (change)="filter()">
+      <mat-radio-button value="under100">Under 100$</mat-radio-button>
+      <mat-radio-button value="over100">Over 100$ </mat-radio-button>
+      <mat-radio-button value="any">Any </mat-radio-button>
+    </mat-radio-group>
+  </div>
+  
+  <div class="margin-5 padding-5">
+    <div>
+      Number of days
+    </div>
+    <mat-radio-group fxLayout="column" class="margin-5" [(ngModel)]="daysNumber" (change)="filter()">
+      <mat-radio-button value="1to3" >1 - 3 days</mat-radio-button>
+      <mat-radio-button value="from4" >4+ days</mat-radio-button>
+      <mat-radio-button value="any" >Any</mat-radio-button>
+    </mat-radio-group>
+  </div>
+</div>
