--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -47,5 +47,5 @@
         </nav>
     </div>
     
-    <mat-progress-bar mode="indeterminate" *ngIf="loading"></mat-progress-bar>
+    <!-- <mat-progress-bar mode="indeterminate" *ngIf="loading"></mat-progress-bar> -->
 </div>
