Add 'Today's deal'

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -4,7 +4,7 @@
       <nav fxLayout="row" fxLayoutAlign="start center">
           <button mat-button routerLink="/"> letsgo123.xyz </button>
           <button mat-button routerLink="/tour/all"> Explore </button>
-          <button mat-button> Today's deal </button>
+          <button mat-button routerLink="/tour/discount"> Today's deal </button>
       </nav>
     
       <nav fxLayout="row" fxLayoutAlign="end center">
